# pytest_features

./: .gitignore  Makefile  pyproject.toml  setup.cfg
calculator/: __init__.py
tests/: conftest.py  products.json  test_calculator.py  test_product.py  test_sum.py
